syntax = "proto3";

package pb;

option go_package = "github.com/This-Is-Prince/agri-product-client/pb";

import "search.proto";

message ListProductReq {
  string shopId = 1;
  string name = 2;
  double price_gte = 4;
  double price_lte = 5;
  double weight_gte = 6;
  double weight_lte = 7;
}
message ListProductRes { Product product = 1; }

service ListProductService {
  rpc ListProduct(ListProductReq) returns (stream ListProductRes);
}